--- a/styles/_components/navbar.module.scss
+++ b/styles/_components/navbar.module.scss
@@ -1,11 +1,35 @@
 .navbar {
 	display: flex;
-	justify-content: space-between;
-	height: 5vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 10000;
+	justify-content: space-around;
+	height: 6vh;
 	padding-top: 3vh;
 	padding-bottom: 3vh;
 	width: 100%;
 	align-items: center;
 	background-color: rgba(58, 115, 192, 255);
 	color: white;
+	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+
+	.navbar__logo {
+		margin-left: 2vw;
+		font-size: 1.5rem;
+	}
+
+	.navbar__links {
+		display: flex;
+		justify-content: space-between;
+		width: auto;
+
+		a {
+			color: white;
+			text-decoration: none;
+			font-size: 1.5vw;
+			padding-left: 2vw;
+			padding-right: 2vw;
+		}
+	}
 }
