--- a/styles/_components/navbar.module.scss
+++ b/styles/_components/navbar.module.scss
@@ -10,9 +10,10 @@
 	padding-bottom: 3vh;
 	width: 100%;
 	align-items: center;
-	background-color: rgba(58, 115, 192, 255);
+	background-color: rgb(230, 234, 245);
 	color: white;
 	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+	transition: all 0.2s ease-in-out;
 
 	.navbar__logo {
 		margin-left: 2vw;
@@ -25,11 +26,22 @@
 		width: auto;
 
 		a {
-			color: white;
+			color: rgb(68, 68, 68);
 			text-decoration: none;
-			font-size: 1.5vw;
-			padding-left: 2vw;
-			padding-right: 2vw;
+			font-size: 1.15vw;
+			padding: 1vh 0.9vw 1vh 0.9vw;
+			margin: 0 1vw 0 1vw;
+			transition: all 0.3s ease-in-out 0s;
+
+			&.active {
+				color: rgb(255, 255, 255);
+			}
+
+			&:hover {
+				color: rgb(255, 255, 255);
+				background-color: rgba(0, 15, 90, 1);
+				border-radius: 5px;
+			}
 		}
 	}
 }
